[gd_scene load_steps=6 format=3 uid="uid://cvych7c63qrr0"]

[ext_resource type="Script" path="res://scripts/shape_controller.gd" id="1_1y3rn"]
[ext_resource type="Script" path="res://scenes/shape_drawing/Line2D.gd" id="3_10msf"]
[ext_resource type="Texture2D" uid="uid://7dx1rwqnkxgg" path="res://assets/sprites/small_scribble_white.png" id="3_c5l7c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3wb25"]
radius = 39.3192

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hvrgi"]
b = Vector2(100, 100)

[node name="shape_controller" type="Node2D"]
script = ExtResource("1_1y3rn")

[node name="Line2D" type="Line2D" parent="."]
texture_repeat = 2
default_color = Color(0, 0, 0, 1)
texture_mode = 1
script = ExtResource("3_10msf")

[node name="slash_line" type="Line2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]
texture_repeat = 2
color = Color(1, 0, 1, 0)
texture = ExtResource("3_c5l7c")

[node name="bomb" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bomb"]
shape = SubResource("CircleShape2D_3wb25")
disabled = true
debug_color = Color(0.94902, 0, 0.572549, 1)

[node name="vaporize" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="vaporize"]

[node name="slash" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="slash"]
shape = SubResource("SegmentShape2D_hvrgi")
disabled = true
debug_color = Color(0.964706, 0, 0.482353, 1)

[node name="attack_delay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="kill_zone_delay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="area_entered" from="bomb" to="." method="_on_bomb_area_entered"]
[connection signal="area_entered" from="vaporize" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="slash" to="." method="_on_slash_area_entered"]
[connection signal="timeout" from="attack_delay" to="." method="_on_attack_delay_timeout"]
[connection signal="timeout" from="kill_zone_delay" to="." method="_on_kill_zone_delay_timeout"]
